workspace = { members = [ "examples/animation_test",
    "examples/dungeon",
    "examples/fully_featured_scene",
    "examples/light_benchmark",
    "examples/moving_light",
    "examples/primitives",
    "examples/reflection_test",
] }
[package]
name = "lumenpyx"
version = "0.1.0"
edition = "2021"
description = "A 2D pixel art renderer with realistic lighting"
documentation = "https://github.com/ABC-Engine/lumenpyx/wiki"
readme = "README.md"
homepage = "https://github.com/ABC-Engine/lumenpyx"
repository = "https://github.com/ABC-Engine/lumenpyx"
license = "MIT"
keywords = ["graphics", "pixel-art", "lighting", "renderer", "gamedev"]
authors = ["ABC-Engine", "Ethan Almloff"]
categories = ["graphics", "game-development", "rendering", "rendering::engine"]


[lib]
name = "lumenpyx"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.34.0"
image = "0.25.1"
rustc-hash = "1.1.0"
winit = "0.29.9"

[profile.release]
#debug = true
lto = true
incremental = false
opt-level = 3
codegen-units = 1
panic = "abort"
overflow-checks = false
